--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Himanshu Bajpai
+logo: "/images/MyImage.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Dynamic and creative software developer with around 6 years of experience primarily focussing on C# and Microsoft Azure. I have worked to develop end-to-end top-notch micro services to manage the resources on Microsoft Azure. 
   <br><br>
-  Second description 
+  I am also a Data Science Enthusiast with focus on Natural Language Processing and have successfully applied the learnings to solve various problems. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
