--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a> 
   <br><br>
   <a href="https://bajpaihimanshu.medium.com/">View Medium Profile</a> 
+  <br><br>
+  <a href="https://github.com/HimanshuBajpai869">View GitHub Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
