Updated Profile description

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Himanshu Bajpai
 logo: "/images/MyImage.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Dynamic and creative software developer with around 6 years of experience primarily focussing on C# and Microsoft Azure. I have worked to develop end-to-end top-notch micro services to manage the resources on Microsoft Azure. 
-  I am also a Data Science Enthusiast with focus on Natural Language Processing and have successfully applied the learnings to solve various problems. 
+  Software Engineer with 6+ year of experience interested in working on the solutions at the intersection of Software Engineering and Machine Learning.I am currently working as MLE@Fractal to build machine learning systems at scale which can help drive decision making with the help of analytics.
   <br><br>
   <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a> 
   <br><br>
