--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: Himanshu Bajpai
 logo: "/images/MyImage.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Engineer with 6+ year of experience interested in working on the solutions at the intersection of Software Engineering and Machine Learning.I am currently working as MLE@Fractal to build machine learning systems at scale which can help drive decision making with the help of analytics.
+  ML Engineer with 7 years of experience and interested in working on the solutions at the intersection of Software Engineering and Machine Learning.I am currently working as MLE@Fractal to build machine learning systems at scale which can help drive decision making with the help of analytics.
   <br><br>
   <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a> 
   <br><br>
   <a href="https://bajpaihimanshu.medium.com/">View Medium Profile</a> 
   <br><br>
-  <a href="https://github.com/HimanshuBajpai869">View GitHub Profile</a> 
+  <a href="https://leetcode.com/himanshubajpai869/">View Leetcode Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
