--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
 title: Himanshu Bajpai
-logo: "/images/MyImage.png?raw=true" 
+logo: "/images/MyImage.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  ML Engineer with 7 years of experience and interested in working on the solutions at the intersection of Software Engineering and Machine Learning.I am currently working as MLE@Fractal to build machine learning systems at scale which can help drive decision making with the help of analytics.
+  Software Engineer with over 7 years of experience currently building a No-Code Machine Learning Platform for Data Engineers and Data Scientists at Tiger Analytics.
   <br><br>
-  <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a>
   <br><br>
-  <a href="https://bajpaihimanshu.medium.com/">View Medium Profile</a> 
+  <a href="https://bajpaihimanshu.medium.com/">View Medium Profile</a>
   <br><br>
-  <a href="https://leetcode.com/himanshubajpai869/">View Leetcode Profile</a> 
-  
+  <a href="https://leetcode.com/himanshubajpai869/">View Leetcode Profile</a>
+  <br><br>
+  <a href="https://www.goodreads.com/himanshubajpai/">View Good Reads Profile</a>
+
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
