--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,11 @@ logo: "/images/MyImage.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Software Engineer with over 7 years of experience currently building a No-Code Machine Learning Platform for Data Engineers and Data Scientists at Tiger Analytics.
   <br><br>
-  <a href="https://www.linkedin.com/in/bajpaihimanshu/">View My LinkedIn Profile</a>
+  <a href="https://www.linkedin.com/in/bajpaihimanshu/">LinkedIn</a> | <a href="https://bajpaihimanshu.medium.com/">Medium</a>
   <br><br>
-  <a href="https://bajpaihimanshu.medium.com/">View Medium Profile</a>
+  <a href="https://leetcode.com/himanshubajpai869/">Leetcode</a> | <a href="https://www.goodreads.com/himanshubajpai/">GoodReads</a>
   <br><br>
-  <a href="https://leetcode.com/himanshubajpai869/">View Leetcode Profile</a>
-  <br><br>
-  <a href="https://www.goodreads.com/himanshubajpai/">View Good Reads Profile</a>
+
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
