--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Himanshu Bajpai
 logo: "/images/MyImage.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Engineer with over 7 years of experience currently building a No-Code Machine Learning Platform for Data Engineers and Data Scientists at Tiger Analytics.
+  Product Engineer with over 8 years of experience in developing software solutions. Currently leading the efforts in building a Low-Code Machine Learning Platform for Data Engineers and Data Scientists at Tiger Analytics.
   <br><br>
   <a href="https://www.linkedin.com/in/bajpaihimanshu/">LinkedIn</a> | <a href="https://bajpaihimanshu.medium.com/">Medium</a> | <a href="https://leetcode.com/himanshubajpai869/">Leetcode</a> | <a href="https://www.goodreads.com/himanshubajpai/">GoodReads</a>
   <br><br>
